[package]
name = "prop-time"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest={version = "0.12.8", features = ["blocking"]}
scraper="0.20.0"
chrono ="0.4.38"
chrono-tz = "0.10.0"
appindicator3 = "0.2.0"
gtk = "0.15"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
config = "0.14"
log = "0.4.27"
dirs = "6.0.0"
tokio = { version = "1.45.1", features = ["full"] }

[dev-dependencies]
mockito = "0.30.0"

[package.metadata.deb]
maintainer = "Charlie Giese <cmggiese@gmail.com>"
copyright = "2025, Charlie Giese"
depends = "libgtk-3-0, libappindicator3-1" # If needed
extended-description = "A system tray app for rugby fixtures"
section = "utilit"
